gccida/g2/print_rtl_graph_with_bb
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtl_graph_with_bb/src/graph.c:716:1: error: must use 'enum' tag to refer to type 'graph_dump_types'
graph_dump_types v21; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtl_graph_with_bb/src/graph.c:892:23: error: use of undeclared identifier 'unk_6708BE'
v31 = ( const char *)&unk_6708BE; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtl_graph_with_bb/src/graph.c:917:14: error: use of undeclared identifier 'off_670ADF'
fprintf( v9, off_670ADF, v33, dest, v14); 
             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtl_graph_with_bb/src/obj/graph.o] Error 1
